# Camera-projection

./: README.md  main.py  pyproject.toml
camera/: camera_base.py  project.py  vision_volume.py
graphs/: matplotlib_graph.py
shapes/: center_of_mass.py  shape_creator.py  shape_transformer.py  value_reader.py
