[tool.poetry]
name = "pythonproject"
version = "0.1.0"
description = ""
authors = ["victorcoelh <victorcoelho250602@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.5"
matplotlib = "^3.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
